# megasource

./: CMakeLists.txt  readme.md
libs/lua-5.1.5/: CMakeLists.txt
libs/lua-5.4.6/: CMakeLists.txt  lfs.c  lfs.h  lualib.h
libs/mpg123-1.25.6/ports/Xcode/: config.h
